# ChibiHash-hs

./: .gitignore  CHANGELOG.md  ChibiHash.cabal  LICENSE  Makefile  README.md
.github/workflows/: test.yml
example/: Main.hs
src/: ChibiHash.hs
src/ChibiHash/: V1.hs  V2.hs
test/: ChibiHashSpec.hs  Spec.hs
