name:                ChibiHash
version:             0.1.0.0
author:              "Ville Vesilehto"
maintainer:          "ville@vesilehto.fi"
homepage:            https://github.com/thevilledev/ChibiHash-hs
bug-reports:         https://github.com/thevilledev/ChibiHash-hs/issues
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
description:         Haskell implementation of ChibiHash, a simple and fast 64-bit hash function
category:            Algorithms

library
  exposed-modules:     ChibiHash
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , bytestring
  default-language:    Haskell2010

test-suite ChibiHash-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ChibiHashSpec
  build-depends:       base
                     , ChibiHash
                     , hspec
                     , bytestring
  default-language:    Haskell2010