name:                ChibiHash
version:             0.1.0.0
synopsis:            a simple and fast 64-bit hash function
description:         Haskell port of ChibiHash, a simple and fast 64-bit hash function.
                    .
                    Features:
                    .
                    * Fast 64-bit hashing
                    * Suitable for hash tables and hash-based data structures
                    .
                    For more information, see the article "ChibiHash: A small, fast 64-bit hash function"
                    at https://nrk.neocities.org/articles/chibihash
homepage:            https://github.com/thevilledev/ChibiHash-hs
bug-reports:         https://github.com/thevilledev/ChibiHash-hs/issues
license:             MIT
license-file:        LICENSE
author:              Ville Vesilehto
maintainer:          ville@vesilehto.fi
copyright:           2024 Ville Vesilehto
category:            Data, Algorithms
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 9.4.7
                   , GHC == 9.6.3
                   , GHC == 9.8.1

source-repository head
  type:     git
  location: https://github.com/thevilledev/ChibiHash-hs.git
  tag:      v0.1.0.0

library
  exposed-modules:     ChibiHash
  hs-source-dirs:      src
  build-depends:       base         >= 4.7 && < 5
                     , bytestring   >= 0.10 && < 0.13
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite ChibiHash-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ChibiHashSpec
  build-depends:       base         >= 4.7 && < 5
                     , ChibiHash
                     , hspec        >= 2.7 && < 3
                     , bytestring   >= 0.10 && < 0.13
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable ChibiHash-example
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:       base         >= 4.7 && < 5
                     , ChibiHash
                     , bytestring   >= 0.10 && < 0.13
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat